@@ -1,5 +1,13 @@
 2008-10-26  Dan Williams  <dcbw@redhat.com>
 
+	Patch from Jaap A. Haitsma <jaap@haitsma.org>
+
+	* src/connection-editor/nm-connection-editor.c
+	  src/connection-editor/nm-connection-list.c
+		- Make default window icons actually work (bgo #553170)
+
+2008-10-26  Dan Williams  <dcbw@redhat.com>
+
 	Patch from Tambet Ingo <tambet@gmail.com>
 
 	* src/applet-device-cdma.c
